data/derived/sp14/progs/unify/prog1616.ml.out
Characters 12-15:
  fixpoint (g,0.5);;
              ^^^
Error: This expression has type float but an expression was expected of type
         int
